# knowgraphhelper

./: .gitignore  CLAUDE.md  build-windows.bat  dev.sh  install.bat  plan.md  start.bat  task_plan.md
.github/workflows/: build-windows.yml
backend/: .env.example  pyproject.toml  run_app.py
backend/app/: main.py
backend/app/api/: extract.py  llm.py  parse.py
backend/app/core/: config.py  errors.py
backend/app/parsers/: base.py  pymupdf4llm_parser.py
backend/app/schemas/: extract.py  llm.py  parse.py
backend/tests/: test_extract.py  test_llm.py  test_parse.py  test_run_app.py  test_static_dir.py
docs/superpowers/plans/: 2026-04-22-medical-literature-extraction-mvp-plan.md
docs/superpowers/specs/: 2026-04-22-medical-literature-extraction-mvp-design.md  2026-04-23-batch-upload-design.md
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: llmResponse.test.ts
frontend/src/components/layout/: AppShell.tsx
frontend/src/components/settings/: LlmConfigDialog.tsx  PromptConfigDialog.tsx
frontend/src/pages/: RecordsPage.tsx  ReviewPage.tsx  UploadPage.tsx
frontend/src/prompts/: guidelinePrompt.ts  paperPrompt.ts  version.ts
frontend/src/schemas/: llmResponse.ts
frontend/src/services/: exportService.ts  extractionService.ts  llmService.ts  parseService.ts  storageService.ts
frontend/src/stores/: documentsStore.ts  llmConfigStore.ts  promptStore.ts  uiStore.ts
frontend/src/types/: index.ts
