[project]
name = "knowgraphhelper-backend"
version = "0.1.0"
description = "医学文献解析提取引擎 MVP 后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pymupdf4llm>=0.0.17",
    "httpx>=0.27",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "httpx>=0.27",
]
